some important bugfixes for modern versions, allow unregistered configs to display